--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "your-app-name",
+  "name": "todo-app",
   "version": "1.0.0",
   "main": "todo.js",
   "scripts": {
     "start": "node todo.js"
   },
   "dependencies": {
-    "express": "^4.17.1"  
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0"
   }
 }
